# moseq2-lda

./: .buildinfo  .gitignore  README.md  data.html  genindex.html  index.html  install.html  model.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  viz.html
.doctrees/: data.doctree  environment.pickle  index.doctree  install.doctree  model.doctree  viz.doctree
.github/workflows/: ci.yaml  ci.yml  docs.yml
_modules/: index.html
_modules/moseq2_lda/: data.html  model.html
_modules/moseq2_lda/viz/: viz.html
_sources/: index.rst.txt  viz.rst.txt
docs/source/: conf.py  data.rst  install.rst  model.rst
moseq2_lda/: __init__.py  cli.py  data.py  model.py  stats.py  util.py
moseq2_lda/viz/: __init__.py  common.py  viz.py  viz1d.py  viz2d.py  viz3d.py
notebooks/: lda_analysis_Celsr3_1894G.ipynb  lda_analysis_optimization.ipynb  lda_analysis_pain_CAR.ipynb  lda_analysis_pain_CAR_ctrl.ipynb  lda_analysis_pain_MIA.ipynb  lda_analysis_sci.ipynb  testing_1D.ipynb
