[metadata]
name = moseq2-lda
version = attr: moseq2_lda.__version__
author = Josh Thackray
author_email = thackray@rutgers.edu
maintainer = Josh Thackray
maintainer_email = thackray@rutgers.edu
url = https://github.com/tischfieldlab/moseq2-lda
description = Framework for rapid execution of LDA analysis with moseq data.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = moseq, LDA
license = unlicensed
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    dataclasses
    numpy>=1.19.5
    scipy
    pandas
    scikit-learn
    tqdm
    matplotlib
    seaborn
    moseq2-viz

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    mypy
    pydocstyle
    toml

[options.exclude_package_data]
tests = *
docs = *

[options.packages.find]
exclude =
    tests*
    docs*

[options.entry_points]
console_scripts =
    moseq2-lda = moseq2_lda.cli:cli

[mypy]
follow_imports = skip
ignore_missing_imports = True
ignore_missing_imports_per_module = True
warn_unused_configs = True